--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -4,10 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
 -->
 <configuration>
-	<appSettings>
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-		<add key="ConnectionString" value="server=GMLING;database=LifeGuide;uid=sa;password=" />
-	</appSettings>
+	<connectionStrings>
+  <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\LifeLeader.mdf;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
