--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -67,6 +67,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\LifeLeader.mdf" />
+    <Content Include="App_Data\LifeLeader_log.ldf">
+      <DependentUpon>LifeLeader.mdf</DependentUpon>
+    </Content>
     <Content Include="bootstrap-5.1.3-dist\css\bootstrap-grid.css" />
     <Content Include="bootstrap-5.1.3-dist\css\bootstrap-grid.min.css" />
     <Content Include="bootstrap-5.1.3-dist\css\bootstrap-grid.rtl.css" />
@@ -488,7 +492,6 @@
     <Content Include="images\4.webp" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
